# smirkly-auth

./: .dockerignore  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  Dockerfile  Makefile  README.md  docker-compose.devcontainer.codex-macos.yml  docker-compose.devcontainer.yml  docker-compose.linux-amd64.yml  docker-compose.yml  requirements.txt
.devcontainer/: README.md  devcontainer.json
.devcontainer/codex-macos/: README.md  devcontainer.json
.github/workflows/: ci.yml  docker.yaml  pages.yml
cmake/: DownloadLibcurl.cmake
configs/: config_vars.docker.example.yaml  config_vars.docker.yaml  config_vars.testing.yaml  static_config.prod.yaml  static_config.yaml
docs/: README.md  api.html  architecture.html  configuration.html  deployment.html  getting-started.html  index.html  operations.html  runbooks.html  security.html
docs/assets/: site.css
migrations/: 0001_init_types.down.sql  0001_init_types.up.sql  0002_create_users.up.sql  0003_create_devices.up.sql  0004_create_sessions.up.sql  0005_create_email_outbox.up.sql  0005_create_email_outbox_down.sql  0006_create_email_verifications.down.sql  0006_create_email_verifications.up.sql  0007_add_users_uniqueness.down.sql  0007_add_users_uniqueness.up.sql  0008_create_email_verification_attempts.down.sql  0008_create_email_verification_attempts.up.sql
openapi/: auth-v0.yaml
scripts/: setup_testsuite_venv.sh
sql/auth/read/devices/: devices_select_by_id.sql
sql/auth/read/email_outbox/: email_outbox_claim_batch.sql
sql/auth/read/email_verifications/: email_verification_attempts_count_recent.sql  email_verifications_find_active_by_user_id.sql
sql/auth/read/sessions/: sessions_select_active_by_user_id.sql  sessions_select_by_id.sql
sql/auth/read/users/: users_exists_by_email.sql  users_exists_by_phone.sql  users_exists_by_username.sql  users_select_by_email.sql  users_select_by_id.sql  users_select_by_phone.sql  users_select_by_username.sql
sql/auth/write/devices/: devices_insert.sql
sql/auth/write/email_outbox/: email_outbox_mark_dead.sql  email_outbox_mark_sent.sql  email_outbox_reschedule.sql  insert_email_outbox.sql
sql/auth/write/email_verifications/: email_verification_attempts_insert.sql  email_verifications_increment_attempts.sql  email_verifications_insert.sql  email_verifications_mark_active_used_by_user_id.sql  email_verifications_mark_used.sql
sql/auth/write/sessions/: sessions_insert.sql  sessions_revoke.sql  sessions_revoke_all_by_user_id.sql  sessions_revoke_and_replace.sql  sessions_revoke_by_token_family.sql  sessions_revoke_by_user_id.sql  sessions_update_last_used.sql
sql/auth/write/users/: users_insert.sql  users_set_email_verified.sql  users_set_phone_verified.sql  users_soft_delete.sql  users_update_password_hash.sql
src/: main.cpp
src/auth/components/: auth_http_component.cpp  auth_http_component.hpp  auth_infra_component.cpp  auth_infra_component.hpp  auth_security_component.cpp  auth_security_component.hpp  auth_service_component.cpp  auth_service_component.hpp  email_outbox_worker_component.cpp  email_outbox_worker_component.hpp
src/auth/config/: auth_config.cpp  auth_config.hpp  auth_dynamic_config.cpp  auth_dynamic_config.hpp  auth_http_config.cpp  auth_http_config.hpp  auth_security_config.cpp  auth_security_config.hpp  auth_service_config.cpp  auth_service_config.hpp  email_outbox_worker_config.cpp  email_outbox_worker_config.hpp  runtime_config_providers.cpp  runtime_config_providers.hpp
src/auth/domain/models/: device.hpp  session.hpp  user.hpp
src/auth/domain/services/: auth_service.cpp  auth_service.hpp
src/auth/domain/value_objects/: email.cpp  email.hpp  phone.cpp  phone.hpp  username.cpp  username.hpp
src/auth/infra/http/: request_meta_extractor.cpp  request_meta_extractor.hpp
src/auth/infra/ids/: uuid_generator.cpp  uuid_generator.hpp
src/auth/infra/mapping/: dto_mappers.cpp  dto_mappers.hpp
src/auth/infra/messaging/: smtp_email_sender.cpp
src/auth/infra/security/: bcrypt_password_hasher.cpp  bcrypt_password_hasher.hpp  random_verification_code_generator.cpp  random_verification_code_generator.hpp
src/auth/infra/workers/: email_outbox_processor.cpp  email_outbox_processor.hpp  email_outbox_runtime_config.hpp  email_outbox_runtime_config_provider.hpp
src/auth/services/: auth_service.cpp  auth_service.hpp  auth_service_types.hpp
src/auth/services/contracts/: auth_context.hpp  auth_tokens.hpp  change_password.hpp  refresh.hpp  request_meta.hpp  sign_in.hpp  sign_up.hpp  verify_email.hpp
src/auth/services/errors/: access_token_errors.hpp  change_password_errors.hpp  refresh_errors.hpp  sign_in_errors.hpp  sign_up_errors.hpp  verify_email_errors.hpp
src/auth/services/factories/: device_factory.cpp  device_factory.hpp  email_outbox_factory.cpp  email_outbox_factory.hpp  email_verification_factory.cpp  email_verification_factory.hpp  session_factory.cpp  session_factory.hpp  user_factory.cpp  user_factory.hpp
src/auth/services/policies/: auth_runtime_policies.hpp  email_verification_policy.hpp  session_policy.hpp  sign_in_policy.hpp  sign_up_policy.hpp
src/auth/services/ports/: db_transaction.hpp  email_verification_sender.hpp  password_hasher.hpp  transaction_manager.hpp  user_repository.hpp  verification_code_generator.hpp
src/auth/services/types/: sign_in.hpp  sign_up.hpp
src/auth/services/usecases/: auth_service.cpp  auth_service.hpp
src/auth/services/validation/: sign_up_validator.cpp  sign_up_validator.hpp
src/common/strings/: ascii_case.hpp  trim.hpp
tests/functional/: conftest.py  test_auth_context_sessions.py  test_sign_up_basic.py
tests/unit/: basic_test.cpp
tests/unit/ids/: uuid_generator_test.cpp
tests/unit/infra/http/: request_meta_extractor_test.cpp
tests/unit/infra/mapping/: dto_mappers_test.cpp
tests/unit/infra/security/: bcrypt_password_hasher_test.cpp  jwt_cpp_token_provider_test.cpp
tests/unit/mocks/: mock_verification_code_generator.cpp  mock_verification_code_generator.hpp
tests/unit/services/: auth_service_test.cpp  sign_up_validator_test.cpp
(+97 files in other folders)
